--- a/day04_function_and_class.ipynb
+++ b/day04_function_and_class.ipynb
@@ -3414,7 +3414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -3525,7 +3525,7 @@
         }
       ],
       "source": [
-        "class Maple():\n",
+        "class Maple:\n",
         "    def __init__(self,str, dex, agi, int, level, hp):\n",
         "        self.dex = dex\n",
         "        self.agi = agi\n",
@@ -3588,6 +3588,51 @@
         "    for i in lis:\n",
         "        i.attack()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "asd는 사료을 먹습니다.\n",
+            "efg는 가산을 산책합니다.\n"
+          ]
+        }
+      ],
+      "source": [
+        "class Dog:\n",
+        "    def __init__(self, name = \"\", age = 0, kind = \"\", dna = \"ksd\" ):\n",
+        "        self.name = name\n",
+        "        self.age = age\n",
+        "        self.kind = kind\n",
+        "        self.dna =dna\n",
+        "\n",
+        "    def eat(self, food):\n",
+        "        print(f\"{self.name}는 {food}을 먹습니다.\")\n",
+        "\n",
+        "    def run(self, runroot):\n",
+        "        print(f\"{self.name}는 {runroot}을 산책합니다.\")\n",
+        "\n",
+        "\n",
+        "dog1 = Dog(\"asd\", 15, \"def\", \"xy\")\n",
+        "dog2 = Dog(\"efg\", 15, \"hij\", \"xx\")\n",
+        "dog3 = Dog(\"kld\", 15, \"mnf\", \"xy\")\n",
+        "\n",
+        "dog1.eat(\"사료\")\n",
+        "dog2.run(\"가산\")\n",
+        "              "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
