--- a/day05_inheritance_and_exception_handling.ipynb
+++ b/day05_inheritance_and_exception_handling.ipynb
@@ -41,6 +41,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#부모 클래스를 가르키는 super class를 기억해야한다. super라는 키워드가 부모를 지칭하는 키워드다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# class list(object) # object자리에 클래스를 넣으면 그 클래스를 상속한다.\n",
+        "# 클래스를 상속한다는것은 상속받는 클래스의 메소드를 다 사용할 수 있다."
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "l5jLbftAQfiz"
@@ -99,6 +118,61 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class Person:\n",
+        "    def __init__(self, name):\n",
+        "        self.name = name\n",
+        "\n",
+        "    def show_name(self):\n",
+        "        print(f\"이름은 {self.name}입니다.\")\n",
+        "\n",
+        "\n",
+        "class Student(Person):\n",
+        "    def __init__(self, name, school):\n",
+        "        super().__init__(name)\n",
+        "        self.school = school\n",
+        "\n",
+        "    def show_school(self):\n",
+        "        print(f\"학교는 {self.school}입니다.\")\n",
+        "\n",
+        "\n",
+        "student1 = Student('asd', 'def')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class Person:\n",
+        "    def __init__(self, name):\n",
+        "        self.name = name\n",
+        "\n",
+        "    def show_name(self):\n",
+        "        print(f\"이름은 {self.name}입니다.\")\n",
+        "\n",
+        "\n",
+        "class Student(Person):\n",
+        "    def __init__(self, name, school):\n",
+        "        super().__init__(name)\n",
+        "        self.school = school\n",
+        "\n",
+        "    def show_school(self):\n",
+        "        print(f\"학교는 {self.school}입니다.\")\n",
+        "\n",
+        "    def show_name(self):\n",
+        "        print(f\"나의 이름은 {self.name}입니다.\")\n",
+        "\n",
+        "\n",
+        "student1 = Student('asd', 'def')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
@@ -139,10 +213,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "나의 이름은 asd입니다.\n",
+            "이름은 asd입니다.\n"
+          ]
+        }
+      ],
+      "source": [
+        "isinstance(student1, Student)\n",
+        "isinstance(student1, Person)\n",
+        "isinstance(student1, object)\n",
+        "student1.show_name()\n",
+        "\n",
+        "person1 = Person(\"asd\")\n",
+        "person1.show_name()\n",
+        "\n",
+        "#isinstance는 객체의 부모클래스인지 여부를 확인하는것이다."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -162,7 +255,9 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "#오버라이딩은 덮어씌운다라는 개념이고"
+      ]
     },
     {
       "cell_type": "code",
@@ -450,6 +545,72 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "DNA는 XXXXXxx입니다.\n",
+            "DNA는 XXXXXxy입니다.\n"
+          ]
+        }
+      ],
+      "source": [
+        "class Dog:\n",
+        "    def __init__(self, name, age):\n",
+        "        self.name = name\n",
+        "        self.age = age\n",
+        "        self.dna = \"XXXXX\"\n",
+        "\n",
+        "    def print_dna(self):\n",
+        "        print(f\"DNA는 {self.dna}입니다.\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "class ASD(Dog):\n",
+        "    def __init__(self, name, age):\n",
+        "        super().__init__(name, age)\n",
+        "        self.dna = \"\".join([self.dna ,\"xx\"])\n",
+        "\n",
+        "\n",
+        "class DEF(Dog):\n",
+        "    def __init__(self, name, age):\n",
+        "        super().__init__(name, age)\n",
+        "        self.dna = \"\".join([self.dna ,\"xy\"])\n",
+        "        \n",
+        "\n",
+        "asd = ASD(\"asd\", 20)\n",
+        "de = DEF(\"def\", 25)\n",
+        "asd.print_dna()\n",
+        "de.print_dna()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'asdedf'"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "asd = \"asd\"\n",
+        "b = \"\".join([asd, \"edf\"])\n",
+        "b"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "QYKtvX9aiAki"
@@ -576,10 +737,58 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "ename": "ValueError",
+          "evalue": "invalid literal for int() with base 10: 'ㅁㄴㅇ'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[54], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# try:\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m())\n\u001b[0;32m      3\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m())\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;241m/\u001b[39mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+            "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'ㅁㄴㅇ'"
+          ]
+        }
+      ],
+      "source": [
+        "try:\n",
+        "    a = int(input())\n",
+        "    b = int(input())\n",
+        "    print(f'{a}/{b} = {a/b}')\n",
+        "except Exception:\n",
+        "    print(\"Error\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 51,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "숫자 변환 실패\n"
+          ]
+        }
+      ],
+      "source": [
+        "try:\n",
+        "    a = int(input())\n",
+        "    b = int(input())\n",
+        "except ValueError as error:\n",
+        "    print(error)\n",
+        "except ZeroDivisionError:\n",
+        "    print(error)\n",
+        "\n",
+        "else:\n",
+        "    print(f'{a}/{b} = {a/b}') #else는 try가 문제가 없을 시 실행 고로 else를 활용할 필요는 없다.\n",
+        "finally:\n",
+        "    print(\"수행 완료\") #try를 판단하고 else도 끝났을때 finally를 활용\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -698,10 +907,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "ename": "ValueError",
+          "evalue": "0보다 작은 값은 입력할 수 없습니다.",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[57], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m a \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0보다 작은 값은 입력할 수 없습니다.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+            "\u001b[1;31mValueError\u001b[0m: 0보다 작은 값은 입력할 수 없습니다."
+          ]
+        }
+      ],
+      "source": [
+        "a = 0\n",
+        "if a <= 0:\n",
+        "    raise ValueError('0보다 작은 값은 입력할 수 없습니다.') #raise는 요즘에 쓰지 않는다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "AssertionError",
+          "evalue": "0보다 작은 값은 입력할 수 없습니다.",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[58], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m a \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0보다 작은 값은 입력할 수 없습니다.\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+            "\u001b[1;31mAssertionError\u001b[0m: 0보다 작은 값은 입력할 수 없습니다."
+          ]
+        }
+      ],
+      "source": [
+        "assert a > 0, '0보다 작은 값은 입력할 수 없습니다.'"
+      ]
     }
   ],
   "metadata": {
@@ -724,7 +970,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.12.4"
     },
     "vscode": {
       "interpreter": {
