--- a/day05_inheritance_and_exception_handling.ipynb
+++ b/day05_inheritance_and_exception_handling.ipynb
@@ -930,7 +930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [
         {
@@ -940,13 +940,94 @@
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[58], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m a \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0보다 작은 값은 입력할 수 없습니다.\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+            "Cell \u001b[1;32mIn[59], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m a \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0보다 작은 값은 입력할 수 없습니다.\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
             "\u001b[1;31mAssertionError\u001b[0m: 0보다 작은 값은 입력할 수 없습니다."
           ]
         }
       ],
       "source": [
+        "a = 0\n",
         "assert a > 0, '0보다 작은 값은 입력할 수 없습니다.'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 75,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0보다 작거나 100보다 큽니다.\n"
+          ]
+        }
+      ],
+      "source": [
+        "def grade(n):\n",
+        "    try:\n",
+        "        user_input = int(input())\n",
+        "        assert 0 <= user_input <= 100\n",
+        "\n",
+        "        if n >= 90:\n",
+        "            print('A')\n",
+        "        elif n >= 80:\n",
+        "            print('B')\n",
+        "        elif n >= 70:\n",
+        "            print('C')\n",
+        "        elif n >= 60:\n",
+        "            print('D')\n",
+        "        else:\n",
+        "            print('F')\n",
+        "\n",
+        "    except ValueError:\n",
+        "        print(\"입력한 숫자 확인:\")\n",
+        "    except AssertionError:\n",
+        "        print(\"0보다 작거나 100보다 큽니다.\")\n",
+        "    \n",
+        "\n",
+        "\n",
+        "  \n",
+        "\n",
+        "grade(100)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 96,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "4\n"
+          ]
+        }
+      ],
+      "source": [
+        "def comp(n):\n",
+        "    \n",
+        "    try:\n",
+        "        user_list = []\n",
+        "        for i in range(n):\n",
+        "            user_list.append(int(input()))\n",
+        "        c, d = 0, 0\n",
+        "        for a, b in enumerate(user_list):\n",
+        "            if d < b:\n",
+        "                c = a\n",
+        "                d = b\n",
+        "\n",
+        "        return c\n",
+        "    except Exception as error:\n",
+        "        d = comp(5)\n",
+        "        if d:\n",
+        "            print(d)\n",
+        "\n",
+        "\n",
+        "comp(5)\n",
+        "\n",
+        "# help(list)"
       ]
     }
   ],
